# TradePilot-Multi-Agent-Commerce-Assistant

./: .env.development.example  .env.example  .env.production.example  .env.staging.example  .gitignore  README.md  main.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  setup.py  test_llm.py  tests_day3_examples.py  tests_local.py
app/: __init__.py  main.py
config/: peer_matching.yaml  sources.yaml
data/: tradepilot.db-shm  tradepilot.db-wal
docs/: Skill化改造说明.md  agent-contract.md  api-contract.md  architecture.md  cleanup-report.md  contract-governance.md  contribution-guide.md  data-contract.md  deployment-guide.md  development-guide.md  file-structure.md  frontend-implementation.md  frontend-integration.md  handover.md  model-provider-configuration.md  real-e2e-validation.md  refactor-mapping.md  report-support.md  team-work-split.md  testing-guide.md  业务功能说明.md  任务边界与验收总说明.md  接口说明.md  数据源说明.md  架构分析说明.md  程序员日志.md  答疑记录模版及例子.docx  项目例会记录表.md  项目开发周期表.md  项目立项申请书模板.md
frontend/: index.html  vercel.json
logs/: collection_jobs.jsonl  skill_trace.jsonl
migrations/: env.py
modules/: __init__.py  agent_core.py  api_server.py  competitor_analysis_chains.py  conversation_crawler.py  dashboard.py  data_loader.py  filtering.py  llm_client.py  memory_store.py  price_memory_dialogue.py  prompts.py  rag_chain.py  report_scheduler.py  report_writer.py  scheduler.py  semantic_filter.py  skill_core.py  source_manager.py  tools.py
new-docs/: TradePilot——基于多智能体的跨境商品智能运营决策助手.docx
scripts/: audit_catalog_product_types.py  customer_service_smoke.py  import_us_hts_tariffs.py  init_db.py  manage_demo_data.py  materialize_lfs_data.py  real_http_e2e.py  (+3 more)
(+231 files in other folders)
