[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "tradepilot-backend"
version = "0.1.0"
description = "TradePilot multi-agent backend scaffold"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy>=2.0,<3",
  "langchain-core>=0.3,<2",
  "langgraph>=0.2,<2",
  "chromadb>=1.0,<2",
  "python-multipart>=0.0.12,<1",
  "pyyaml>=6,<7",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
