[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "tradepilot-backend"
version = "0.1.0"
description = "TradePilot evidence-grounded multi-agent commerce backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "real_model: calls the configured external analysis model",
    "real_rerank: calls the configured external reranker model",
    "real_data: uses real filtered data and Chroma indexes",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
